Update JavatestUtil.java for java727 test runs